fix: minor fixes
- stop refreshBtn from fetching if max depth reached
- truncate text in Analyze on Lichess btn on small screens
- remove placeholder username from hidden elements

--- a/src/css/hideOpponent.css
+++ b/src/css/hideOpponent.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.player-component.player-top .player-tagline .cc-user-block-component > :not(.connection-component) {
+.player-component.player-top .player-tagline .cc-user-block-component > :not(.connection-component):not(#Unknown) {
   display: none;
 }
 
